crates/bc-cli/tests/cli/snapshots/cli__profile__profile_create_json_output.snap
---
source: crates/bc-cli/tests/cli/profile.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
{
  "id": "[PROFILE_ID]",
  "importer": "csv",
  "name": "bank"
}
----- stderr -----
warning: no installed importer named 'csv' (installed: none)
