crates/bc-cli/tests/cli/snapshots/cli__profile__profile_create_rejects_a_duplicate_name.snap
---
source: crates/bc-cli/tests/cli/profile.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: invalid input: import profile 'bank' already exists
