crates/bc-cli/tests/cli/snapshots/cli__profile__profile_create_rejects_a_malformed_config.snap
---
source: crates/bc-cli/tests/cli/profile.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: invalid TOML in [TEMP_DIR]/broken.toml: TOML parse error at line 1, column 6
  |
1 | this is not = = toml
  |      ^
key with no value, expected `=`
