crates/bc-cli/tests/cli/snapshots/cli__profile__profile_create_rejects_a_non_table_config.snap
---
source: crates/bc-cli/tests/cli/profile.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: config in [TEMP_DIR]/array.json must be a table of key/value pairs
