crates/bc-cli/tests/cli/snapshots/cli__profile__profile_create_rejects_empty_stdin.snap
---
source: crates/bc-cli/tests/cli/profile.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: config in stdin is empty
