crates/bc-cli/tests/cli/snapshots/cli__profile__profile_create_succeeds.snap
---
source: crates/bc-cli/tests/cli/profile.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Created import profile 'bank' (csv).
----- stderr -----
warning: no installed importer named 'csv' (installed: none)
