crates/bc-cli/tests/cli/snapshots/cli__profile__profile_edit_rename_only_does_not_warn_about_importer.snap
---
source: crates/bc-cli/tests/cli/profile.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Updated import profile 'savings'.
----- stderr -----
