crates/bc-cli/tests/cli/snapshots/cli__profile__profile_edit_renames_the_profile.snap
---
source: crates/bc-cli/tests/cli/profile.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
 NAME    | IMPORTER | CREATED                        
=====================================================
 savings | csv      | [TIMESTAMP] 
----- stderr -----
