crates/bc-cli/tests/cli/snapshots/cli__profile__profile_edit_unknown_name_errors.snap
---
source: crates/bc-cli/tests/cli/profile.rs
expression: output
---
success: false
exit_code: 2
----- stdout -----
----- stderr -----
error: not found: import profile 'nonexistent'
