crates/bc-cli/tests/cli/snapshots/cli__profile__profile_edit_with_no_changes_errors.snap
---
source: crates/bc-cli/tests/cli/profile.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: nothing to change: pass at least one of --name, --importer, --config
