crates/bc-cli/tests/cli/snapshots/cli__profile__profile_list_is_empty_by_default.snap
---
source: crates/bc-cli/tests/cli/profile.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
No import profiles.
----- stderr -----
